...
                      Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        crossAxisAlignment: CrossAxisAlignment.center,
                        children: <Widget>[
                          const Text('Administration:     '),
                          DropdownButton<String>(
                            key: const ValueKey('administrationdropdown'),
                            value: _administrationTypeValue,
                            isDense: true,
                            items: const <DropdownMenuItem<String>>[
                              DropdownMenuItem<String>(
                                value: '',
                                child: Text(
                                  '',
                                ),
                              ),
                              DropdownMenuItem<String>(
                                value: 'iv',
                                child: Text(
                                  'IV (Propofol)',
                                ),
                              ),
                              DropdownMenuItem<String>(
                                value: 'inhale',
                                child: Text(
                                  'Inhalative',
...
                                const Text(
                                    'Duration of the procedure (minutes):     '),
                                SizedBox(
                                  height: 42,
                                  width: 50,
                                  child: TextField(
                                    key: const ValueKey('durationfield'),
                                    maxLines: 1,
                                    keyboardType:
                                        const TextInputType.numberWithOptions(
                                            decimal: true),
                                    onChanged: (String value) {
                                      _durationProcedureField = value;
...
                                const Text(
                                    'Concentration of propofol (mcg/kg/min):   '),
                                SizedBox(
                                  height: 42,
                                  width: 50,
                                  child: TextField(
                                    key: const ValueKey('concentrationfield'),
                                    maxLines: 1,
                                    keyboardType:
                                        const TextInputType.numberWithOptions(
                                            decimal: true),
                                    onChanged: (String value) {
                                      _propofolConcentrationField = value;
...
                              children: <Widget>[
                                const Text('Number of syringes:        '),
                                SizedBox(
                                  height: 42,
                                  width: 50,
                                  child: TextField(
                                    key: const ValueKey('nbsyringesfield'),
                                    maxLines: 1,
                                    keyboardType:
                                        const TextInputType.numberWithOptions(),
                                    onChanged: (String value) {
                                      _syringeNumbersField = value;
                                      _clearResult();
...
                              children: <Widget>[
                                const Text('Patient weight (kg):     '),
                                SizedBox(
                                  height: 42,
                                  width: 50,
                                  child: TextField(
                                    key: const ValueKey('weightfield'),
                                    maxLines: 1,
                                    keyboardType:
                                        const TextInputType.numberWithOptions(
                                            decimal: true),
                                    onChanged: (String value) {
                                      _patientWeightField = value;
...
                                ),
                              ],
                            )
                          : const SizedBox.shrink(),
                      _administrationTypeValue != ''
                          ? ElevatedButton(
                              key: const ValueKey('computebutton'),
                              onPressed: _onPressedCompute,
                              child: const Text('Compute'),
                            )
                          : const SizedBox.shrink(),
                      _administrationTypeValue != ''
                          ? Text(
...
